Delete btn practice doen.

--- a/deletCntn.html
+++ b/deletCntn.html
@@ -6,8 +6,31 @@
     <title>Delete Button <button></button></title>
   </head>
   <body>
-    <h1>Delete Content using Delete button</h1>
-    <input type="text" /> <br /><br />
-    <button>Delete!</button>
+    <h1 id="content">Delete Content using Delete button</h1>
+    <input id="input-field" type="text" placeholder="Please type Delete." />
+    <br /><br />
+    <button id="delete-btn" disabled>Delete!</button>
+
+    <script>
+      document
+        .getElementById("input-field")
+        .addEventListener("keyup", function (event) {
+          const text = event.target.value;
+          // console.log(text);
+          const dltbtn = document.getElementById("delete-btn");
+          if (text === "Delete") {
+            dltbtn.removeAttribute("disabled");
+          } else {
+            dltbtn.setAttribute("disabled", true);
+          }
+        });
+
+      document
+        .getElementById("delete-btn")
+        .addEventListener("click", function () {
+          const element = document.getElementById("content");
+          element.style.display = "none";
+        });
+    </script>
   </body>
 </html>
